--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@11ty/eleventy": "^0.9.0",
     "axios": "^0.19.0",
     "dotenv": "^8.2.0",
-    "node-sass": "^4.13.0"
+    "node-sass": "^4.13.0",
+    "nunjucks-includeData": "0.0.9"
   }
 }
