--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Personal site",
   "scripts": {
+    "build": "npm run sass && npx eleventy",
     "eleventy": "npx eleventy --serve",
     "sass": "node-sass src/assets/css/styles.scss src/assets/css/styles.css"
   },
@@ -10,13 +11,8 @@
     "type": "git",
     "url": "git+https://github.com/ccGabbles/gbrl.git"
   },
-  "keywords": [],
   "author": "Gabriël Moawad",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/ccGabbles/gbrl/issues"
-  },
-  "homepage": "https://github.com/ccGabbles/gbrl#readme",
+  "homepage": "http://gbrl.xyz",
   "dependencies": {
     "@11ty/eleventy": "^0.9.0",
     "axios": "^0.19.0",
