--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "build": "npm run sass && npx eleventy",
     "eleventy": "npx eleventy --serve",
-    "sass": "node-sass src/assets/css/styles.scss src/assets/css/styles.css"
+    "sass": "node-sass src/assets/css/styles.scss src/assets/css/styles.css",
+    "lambda:serve": "netlify-lambda serve src/lambda",
+    "lambda:build": "netlify-lambda build src/lambda"
   },
   "repository": {
     "type": "git",
@@ -18,6 +20,7 @@
     "axios": "^0.19.0",
     "dotenv": "^8.2.0",
     "node-sass": "^4.13.0",
-    "nunjucks-includeData": "0.0.9"
+    "nunjucks-includeData": "0.0.9",
+    "netlify-lambda": "^1.6.3"
   }
 }
