minor tweak to npm scripts

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Personal site",
   "scripts": {
-    "build": "npm run sass && npx eleventy",
+    "build": "npm run lambda:build & npm run sass && npx eleventy",
     "eleventy": "npx eleventy --serve",
     "sass": "node-sass src/assets/css/styles.scss src/assets/css/styles.css",
     "lambda:serve": "netlify-lambda serve src/lambda",
